[refactoring] CompetitionFacadeImpl